# haskell-typescript

./: .gitignore  README.md  haskell-typescript.cabal
examples/: Main.hs
src/: heyy.ts
src/TypeScript/: Bindings.hs
src/tough/: heyy.js
