name:                haskell-typescript
version:             0.1.0.1
synopsis:            Simple TypeScript API
-- description:
license:             GPL-3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           Copyright (C) 2013 David Johnson
category:            Language
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     TypeScript.Bindings
  -- other-modules:
  build-depends:
      base      >= 4    && <= 5
    , process   >= 1.1  && <= 1.2
  hs-source-dirs:      src
